RESOLVED FIXED58615
Select All context menu item doesn't work in Flash
https://bugs.webkit.org/show_bug.cgi?id=58615
Summary Select All context menu item doesn't work in Flash
Anders Carlsson
Reported 2011-04-14 17:47:25 PDT
Select All context menu item doesn't work in Flash
Attachments
Patch (1.34 KB, patch)
2011-04-14 17:49 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-04-14 17:49:18 PDT
Anders Carlsson
Comment 2 2011-04-14 17:51:09 PDT
Note You need to log in before you can comment on or make changes to this bug.